# k-sentry

./: .gitignore  ARTIFACT_README.md  ARTIFACT_SUMMARY.md  ATC_LIMITATIONS.md  ATC_RELATED_WORK.md  MASTER_REPORT.md  README.md  paper_evaluation_section.md
artifacts/: baseline_bench.csv  baseline_bench_repeated.csv  baseline_bench_summary.csv  bench.csv  collector_resource.csv  detection_latency.csv  detection_latency_summary.csv  ebpf_pipeline_rate.csv  evaluation_summary.md  final_evaluation_table.md  native_collector_resource_summary_20260518_032023.md  overhead_file_read.csv  overhead_file_read_summary.csv  overload_raw_ebpf_report.txt  overload_report.txt  real_workload_raw_ebpf_report.txt  real_workload_report.txt  resource_overhead.csv  resource_overhead_summary.md  stress_sweep.csv  stress_sweep_N1000_report.txt  stress_sweep_N2000_report.txt  stress_sweep_N500_report.txt  stress_sweep_summary.md  timefence_ebpf_filtered_report.txt  timefence_ebpf_filtered_report_v2.txt  timefence_ebpf_ip_port_report.txt  timefence_ebpf_live_report.txt  timefence_ebpf_ringbuf_accounting_report.txt  timefence_vs_baseline_comparison.csv  timefence_vs_baseline_comparison.md  wsl_atc_eval_summary_20260518_032023.md  wsl_baseline_bench_20260518_032023.csv  wsl_baseline_bench_repeated_20260518_032023.csv  wsl_baseline_bench_summary_20260518_032023.csv  wsl_collector_resource_20260518_032023.csv  wsl_ebpf_pipeline_rate_20260518_032023.csv  wsl_ebpf_pipeline_rate_summary_20260518_032023.md  (+2 more)
timefence-epbf/: Cargo.toml  README.md  timefence_ebpf_filtered_report.txt
timefence-epbf/timefence-epbf/: README.md  timefence_ebpf_filtered_report.txt  timefence_ebpf_live_report.txt
timefence-epbf/timefence-epbf/timefence_epbf/: build.rs
timefence-epbf/timefence-epbf/timefence_epbf/src/: main.rs
timefence-epbf/timefence-epbf/timefence_epbf_common/src/: lib.rs
timefence-epbf/timefence-epbf/timefence_epbf_ebpf/src/: main.rs
timefence-epbf/timefence_epbf/: Cargo.toml
timefence-epbf/timefence_epbf_common/: Cargo.toml
timefence-epbf/timefence_epbf_ebpf/: Cargo.toml
timefence-epbf/timefence_epbf_ebpf/src/: main.rs
(+49 files in other folders)
