[package]
name = "timefence-epbf"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
timefence_epbf_common = { package = "timefence-epbf-common", path = "../timefence_epbf_common", features = ["user"] }
timefence-core = { path = "../../timefence-core" }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
timefence_epbf_ebpf = { package = "timefence-epbf-ebpf", path = "../timefence_epbf_ebpf" }

[[bin]]
name = "timefence-epbf"
path = "src/main.rs"